--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ContentActivity.HomeActivity">
+    tools:context=".content.HomeActivity">
 
     <TextView
         android:id="@+id/text"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="Name"
+        android:text="@string/name"
         android:textColor="@color/den"
         android:textSize="25sp"
         android:textStyle="bold" />
@@ -36,21 +36,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Email"
+        android:text="@string/emails"
         android:textSize="15sp"
         android:textStyle="bold" />
 
     <Button
 
         android:id="@+id/btn_logout"
-        android:layout_marginBottom="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
 
-        android:textColor="@color/den"
-        android:text="Logout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="200dp"
+        android:text="@string/logout"
+        android:textColor="@color/den" />
 
 </RelativeLayout>
