--- a/app/src/main/res/layout/layout_navigation_header.xml
+++ b/app/src/main/res/layout/layout_navigation_header.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,7 +21,7 @@
         android:layout_width="93dp"
         android:layout_height="25dp"
         android:layout_marginTop="24dp"
-        android:text="Trường IT"
+        android:text="@string/tr_ng_it"
         android:textColor="@color/red"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="12dp"
-        android:text="Online"
+        android:text="@string/online"
         android:textColor="@color/xanhla"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
