--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="Tim">#673AB7</color>
-    <color name="Trang">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="hong">#FF5252</color>
     <color name="teal_700">#FF018786</color>
     <color name="den">#FF000000</color>
     <color name="xanhla">#32CD32</color>
     <color name="red">#EC1707</color>
+    <color name="xanh">#20B1F3</color>
+    <color name="vang">#F4ED05</color>
 </resources>
