--- a/app/src/main/res/layout/layout_navigation_header.xml
+++ b/app/src/main/res/layout/layout_navigation_header.xml
@@ -22,7 +22,7 @@
         android:layout_height="25dp"
         android:layout_marginTop="24dp"
         android:text="@string/tr_ng_it"
-        android:textColor="@color/red"
+        android:textColor="#DD2C00"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.727"
@@ -36,7 +36,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="12dp"
         android:text="@string/online"
-        android:textColor="@color/xanhla"
+        android:textColor="#0277BD"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.626"
