--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,7 @@
         android:layout_marginTop="30dp">
 
         <EditText
+            android:inputType="text"
             android:autofillHints="username"
             android:id="@+id/Email"
             android:layout_width="match_parent"
@@ -34,6 +35,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:inputType="text"
         android:id="@+id/layoutPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
